--- a/VdubApp/Base.lproj/Main.storyboard
+++ b/VdubApp/Base.lproj/Main.storyboard
@@ -1,17 +1,123 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="JXg-tL-KJa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5CF-jW-e0L">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--Page View Controller-->
-        <scene sceneID="4R8-cl-D6g">
+        <!--Tab Bar Controller-->
+        <scene sceneID="EEE-t9-Dhq">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="JXg-tL-KJa" customClass="PageViewController" customModule="VdubApp" customModuleProvider="target" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xp8-Kx-uWI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tabBarController id="5CF-jW-e0L" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="aqz-vd-hui">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="5nE-js-Plx" kind="relationship" relationship="viewControllers" id="ewO-a6-gG0"/>
+                        <segue destination="vzF-fY-ai8" kind="relationship" relationship="viewControllers" id="BRE-xZ-rrz"/>
+                        <segue destination="HQF-5N-KI1" kind="relationship" relationship="viewControllers" id="rMC-hg-9Ad"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SFC-67-jJb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="427" y="6"/>
+            <point key="canvasLocation" x="-1073" y="82"/>
+        </scene>
+        <!--Breakfast-->
+        <scene sceneID="Gh3-DX-1Us">
+            <objects>
+                <tableViewController title="Breakfast" id="5nE-js-Plx" customClass="MealTableViewController" customModule="VdubApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="0uN-UL-SMl">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="9pg-Na-8M1">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9pg-Na-8M1" id="MLE-wS-qEp">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="5nE-js-Plx" id="81y-ky-MFf"/>
+                            <outlet property="delegate" destination="5nE-js-Plx" id="t5H-Iq-gdD"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Breakfast" id="iYL-YF-WyX"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="On2-wK-ptS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-205" y="-634"/>
+        </scene>
+        <!--Lunch-->
+        <scene sceneID="tHO-lN-N1M">
+            <objects>
+                <tableViewController title="Lunch" id="vzF-fY-ai8" customClass="MealTableViewController" customModule="VdubApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Dmk-s0-xRG">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="hVe-ll-hd9">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hVe-ll-hd9" id="VzH-o3-0LA">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="1" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lFb-Se-sgV">
+                                            <rect key="frame" x="8" y="11" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="vzF-fY-ai8" id="Pmj-1E-G6G"/>
+                            <outlet property="delegate" destination="vzF-fY-ai8" id="tG0-jC-JhU"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Lunch" id="xHx-Tm-W1v"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I98-9g-hsk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-149" y="158"/>
+        </scene>
+        <!--Dinner-->
+        <scene sceneID="jBB-LO-tKW">
+            <objects>
+                <tableViewController title="Dinner" id="HQF-5N-KI1" customClass="MealTableViewController" customModule="VdubApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="KIi-DL-tPL">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ti2-cv-lv4">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ti2-cv-lv4" id="IkV-7d-Ttq">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="HQF-5N-KI1" id="KM3-Ty-UdC"/>
+                            <outlet property="delegate" destination="HQF-5N-KI1" id="lbb-P8-qt3"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Dinner" id="uDx-N6-Ofp"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gLc-WU-eJ7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-299" y="946"/>
         </scene>
     </scenes>
 </document>
