--- a/VdubApp/Base.lproj/Main.storyboard
+++ b/VdubApp/Base.lproj/Main.storyboard
@@ -18,6 +18,7 @@
                         <segue destination="5nE-js-Plx" kind="relationship" relationship="viewControllers" id="ewO-a6-gG0"/>
                         <segue destination="vzF-fY-ai8" kind="relationship" relationship="viewControllers" id="BRE-xZ-rrz"/>
                         <segue destination="HQF-5N-KI1" kind="relationship" relationship="viewControllers" id="rMC-hg-9Ad"/>
+                        <segue destination="cGn-vX-Fb2" kind="relationship" relationship="viewControllers" id="nex-YA-qXe"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SFC-67-jJb" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -97,6 +98,52 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I98-9g-hsk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-149" y="158"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="WBP-Sa-8zQ">
+            <objects>
+                <tableViewController id="pNi-aG-Jck" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="aHB-iW-trq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="nYn-UP-ils">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nYn-UP-ils" id="fUP-DM-ChL">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="pNi-aG-Jck" id="obY-QY-b2J"/>
+                            <outlet property="delegate" destination="pNi-aG-Jck" id="Cb5-vM-4P5"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="zHm-CI-iNr"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LIN-61-4ao" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="90" y="1642"/>
+        </scene>
+        <!--More-->
+        <scene sceneID="hBq-fw-dKw">
+            <objects>
+                <navigationController id="cGn-vX-Fb2" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="More" id="m1Z-Kn-czn"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2rS-kg-GLU">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="pNi-aG-Jck" kind="relationship" relationship="rootViewController" id="aTU-fD-NzT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ega-B7-IMs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-730" y="1642"/>
         </scene>
         <!--Dinner-->
         <scene sceneID="jBB-LO-tKW">
